# legacy-sipXlang-ch

./: configure.ac  sipxecs-lang-ch.spec.in  sipxlang-ch.spec.in
sipxpbx/: sipxplugin.beans.xml
